// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component Button > snapshot: Button with onClick and disabled 1`] = `
<button
  data-testid="click-btn"
  disabled=""
  type="button"
>
  Processing...
</button>
`;

exports[`Component Button > snapshot: Button with onClick and without disabled 1`] = `
<button
  data-testid="click-btn"
  type="button"
>
  Press me
</button>
`;
